--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,58 +1,77 @@
 movies:
   - name: movie1
     file: /home/dt8/movies/00001.m2ts
-    ss: 00:05:00
+    ss:
+      - 00:05:00
     w: 1920
     h: 1080
   - name: movie2
     file: /home/dt8/movies/01-007.m2ts
-    ss: 00:13:00
+    ss:
+      - 00:13:00
     w: 1920
     h: 1080
   - name: movie3
     file: /home/dt8/movies/01-009.m2ts
-    ss: 00:10:00
+    ss:
+      - 00:10:00
     w: 1920
     h: 1080
   - name: movie4
     file: /home/dt8/movies/01-010.m2ts
-    ss: 00:10:00
+    ss:
+      - 00:10:00
     w: 1920
     h: 1080
   - name: movie5
     file: /home/dt8/movies/bankok_killer.m2ts
-    ss: 00:10:00
+    ss:
+      - 00:10:00
     w: 1920
     h: 1080
   - name: movie6
     file: /home/dt8/movies/clear_and_present_danger.m2ts
-    ss: 00:10:00
+    ss:
+      - 00:10:00
     w: 1920
     h: 1080
   - name: movie7
     file: /home/dt8/movies/the_mask.m2ts
-    ss: 00:10:00
+    ss:
+      - 00:10:00
     w: 1920
     h: 1080
   - name: anim1
     file: /home/dt8/movies/animation/miyazaki/from.up.on.poppy.hill.2011.1080p.bluray.x264-nodlabs.mkv
-    ss: 00:15:00
+    ss:
+      - 00:15:00
     w: 1920
     h: 1080
   - name: anim2
     file: /home/dt8/movies/animation/miyazaki/[NoobSubs] The Borrower Arrietty (1080p Blu-ray eng dub 8bit AC3).mp4
-    ss: 00:15:00
+    ss:
+      - 00:15:00
     w: 1920
     h: 1080
   - name: anim3
     file: /home/dt8/movies/animation/miyazaki/[Ponyo_on_the_Cliff][x264_aac][1920×1080]9DualAudio(chi-can-jap-eng-ita-rus-spa-fre-por).mkv
-    ss: 00:15:00
+    ss:
+      - 00:15:00
     w: 1920
     h: 1080
   - name: home_movie3
     file: /dataset/WRATH_OF_THE_TITANS.Left_Right.mkv
-    ss: 00:12:00
+    ss:
+      - 00:12:00
+      - 00:13:00
+      - 00:14:00
     w: 3840
     h: 1080
+  - name: home_valid1
+    file: /dataset/3dvideo/THE_HOBBIT__THE_DESOLATION_OF_SMAUG_PART_1.Title100_1.left.mkv
+    ss:
+      - 00:12:00
+    w: 1920
+    h: 800
 params: "-pix_fmt rgb24 -c:v rawvideo"
 crop: 896
