--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,27 +3,33 @@ movies:
     file: /home/dt8/movies/00001.m2ts
     ss:
       - 00:05:00
+      - 00:15:00
+      - 01:05:00
     w: 1920
     h: 1080
   - name: movie2
     file: /home/dt8/movies/01-007.m2ts
     ss:
       - 00:13:00
+      - 00:35:00
     w: 1920
     h: 1080
   - name: movie3
     file: /home/dt8/movies/01-009.m2ts
     ss:
       - 00:10:00
+      - 00:35:00
     w: 1920
     h: 1080
   - name: movie4
     file: /home/dt8/movies/01-010.m2ts
     ss:
       - 00:10:00
+      - 00:25:00
+      - 00:45:00
     w: 1920
     h: 1080
-  - name: movie5
+  - name: disable_movie5
     file: /home/dt8/movies/bankok_killer.m2ts
     ss:
       - 00:10:00
@@ -41,6 +47,30 @@ movies:
       - 00:10:00
     w: 1920
     h: 1080
+  - name: 4k_lala
+    file: /media/dt8/My Passport/4K/La.La.Land.2016.2160p.BluRay.HEVC.TrueHD.7.1.Atmos-TERMiNAL/BDMV/STREAM/00000.m2ts
+    ss:
+      - 00:30:00
+      - 01:00:00
+      - 01:40:00
+    w: 3840
+    h: 2160
+  - name: 4k_arr
+    file: /media/dt8/My Passport/4K/Arrival.2016.2160p.BluRay.HEVC.DTS-HD.MA.7.1-TERMiNAL/BDMV/STREAM/00001.m2ts
+    ss:
+      - 00:20:00
+      - 00:50:00
+      - 01:20:00
+    w: 3840
+    h: 2160
+  - name: 4k_Fan
+    file: /media/dt8/My Passport/4K/Fantastic.Beasts.and.Where.to.Find.Them.2016.2160p.BluRay.HEVC.TrueHD.7.1.Atmos-SUPERSIZE/BDMV/STREAM/00001.m2ts
+    ss:
+      - 00:20:00
+      - 00:50:00
+      - 01:20:00
+    w: 3840
+    h: 2160
   - name: anim1
     file: /home/dt8/movies/animation/miyazaki/from.up.on.poppy.hill.2011.1080p.bluray.x264-nodlabs.mkv
     ss:
