--- a/config/config.yaml
+++ b/config/config.yaml
@@ -71,6 +71,22 @@ movies:
       - 01:20:00
     w: 3840
     h: 2160
+  - name: 4k_face01
+    file: /media/dt5.hdd2/face/crop_01/img_%08d.png
+    ss:
+      - 00:00:00
+    w: 1024
+    h: 1024
+    type: images
+    count: 4130
+  - name: 4k_face02
+    file: /media/dt5.hdd2/face/crop_02/img_%08d.png
+    ss:
+      - 00:00:00
+    w: 1024
+    h: 1024
+    type: images
+    count: 4568
   - name: anim1
     file: /home/dt8/movies/animation/miyazaki/from.up.on.poppy.hill.2011.1080p.bluray.x264-nodlabs.mkv
     ss:
