--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,7 +7,7 @@ movies:
       - 01:05:00
     w: 1920
     h: 1080
-    duration: 02:00:00
+    duration: 02h15m00s
     framerate: 24
   - name: movie2
     file: /home/dt8/movies/01-007.m2ts
@@ -16,7 +16,7 @@ movies:
       - 00:35:00
     w: 1920
     h: 1080
-    duration: 02:00:00
+    duration: 00h55m00s
     framerate: 24
   - name: movie3
     file: /home/dt8/movies/01-009.m2ts
@@ -25,7 +25,7 @@ movies:
       - 00:35:00
     w: 1920
     h: 1080
-    duration: 02:00:00
+    duration: 02h20m00s
     framerate: 24
   - name: movie4
     file: /home/dt8/movies/01-010.m2ts
@@ -35,7 +35,7 @@ movies:
       - 00:45:00
     w: 1920
     h: 1080
-    duration: 02:00:00
+    duration: 01h38m00s
     framerate: 24
   - name: disable_movie5
     file: /home/dt8/movies/bankok_killer.m2ts
@@ -43,7 +43,7 @@ movies:
       - 00:10:00
     w: 1920
     h: 1080
-    duration: 02:00:00
+    duration: 01h38m00s
     framerate: 24
   - name: movie6
     file: /home/dt8/movies/clear_and_present_danger.m2ts
@@ -51,7 +51,7 @@ movies:
       - 00:10:00
     w: 1920
     h: 1080
-    duration: 02:00:00
+    duration: 02h20m00s
     framerate: 24
   - name: movie7
     file: /home/dt8/movies/the_mask.m2ts
@@ -59,7 +59,7 @@ movies:
       - 00:10:00
     w: 1920
     h: 1080
-    duration: 02:00:00
+    duration: 01h40m00s
     framerate: 24
   - name: 4k_lala
     file: /media/dt8/My Passport/4K/La.La.Land.2016.2160p.BluRay.HEVC.TrueHD.7.1.Atmos-TERMiNAL/BDMV/STREAM/00000.m2ts
@@ -69,7 +69,7 @@ movies:
       - 01:40:00
     w: 3840
     h: 2160
-    duration: 02:00:00
+    duration: 02h07m00s
     framerate: 24
   - name: 4k_arr
     file: /media/dt8/My Passport/4K/Arrival.2016.2160p.BluRay.HEVC.DTS-HD.MA.7.1-TERMiNAL/BDMV/STREAM/00001.m2ts
@@ -79,7 +79,7 @@ movies:
       - 01:20:00
     w: 3840
     h: 2160
-    duration: 02:00:00
+    duration: 01h55m00s
     framerate: 24
   - name: 4k_Fan
     file: /media/dt8/My Passport/4K/Fantastic.Beasts.and.Where.to.Find.Them.2016.2160p.BluRay.HEVC.TrueHD.7.1.Atmos-SUPERSIZE/BDMV/STREAM/00001.m2ts
@@ -89,24 +89,24 @@ movies:
       - 01:20:00
     w: 3840
     h: 2160
-    duration: 02:00:00
+    duration: 02h12m00s
     framerate: 24
-  - name: hq_movieface
-    file: /media/dt5/movie_face.yuv
-    ss:
-      - 00:00:00
-      - 00:00:40
-      - 00:01:20
-      - 00:02:00
-      - 00:02:40
-      - 00:03:20
-      - 00:04:00
-      - 00:05:00
-    w: 2048
-    h: 858
-    type: yuv
-    duration: 02:00:00
-    framerate: 24
+#  - name: hq_movieface
+#    file: /media/dt5/movie_face.yuv
+#    ss:
+#      - 00:00:00
+#      - 00:00:40
+#      - 00:01:20
+#      - 00:02:00
+#      - 00:02:40
+#      - 00:03:20
+#      - 00:04:00
+#      - 00:05:00
+#    w: 2048
+#    h: 858
+#    type: yuv
+#    duration: 02:00:00
+#    framerate: 24
   - name: 4k_face01
     file: /media/dt5.hdd2/face/crop_01/img_%08d.png
     ss:
@@ -129,7 +129,7 @@ movies:
       - 00:15:00
     w: 1920
     h: 1040
-    duration: 02:00:00
+    duration: 01h30m00s
     framerate: 24
   - name: anim2
     file: "/home/dt8/movies/animation/miyazaki/[NoobSubs]TheBorrowerArrietty_1080pBlu-rayengdub8bitAC3_.mp4"
@@ -138,7 +138,7 @@ movies:
       - 00:35:00
     w: 1920
     h: 1038
-    duration: 02:00:00
+    duration: 01h33m00s
     framerate: 24
   - name: anim3
     file: /home/dt8/movies/animation/miyazaki/[Ponyo_on_the_Cliff][x264_aac][1920×1080]9DualAudio(chi-can-jap-eng-ita-rus-spa-fre-por).mkv
@@ -147,7 +147,7 @@ movies:
       - 00:20:10
     w: 1920
     h: 1080
-    duration: 02:00:00
+    duration: 01h42m00s
     framerate: 24
   - name: valid1
     file: /home/dt8/movies/animation/瑶玲电影剪辑测试片段.mov
@@ -156,7 +156,7 @@ movies:
       - 00:00:30
     w: 720
     h: 576
-    duration: 02:00:00
+    duration: 0h02m30s
     framerate: 24
   - name: home_movie3
     file: /dataset/WRATH_OF_THE_TITANS.Left_Right.mkv
@@ -166,7 +166,7 @@ movies:
       - 00:14:00
     w: 3840
     h: 1080
-    duration: 02:00:00
+    duration: 02h00m00s
     framerate: 24
   - name: home_valid1
     file: /dataset/3dvideo/THE_HOBBIT__THE_DESOLATION_OF_SMAUG_PART_1.Title100_1.left.mkv
